Fix dragging behavior on Mobile Safari

--- a/inst/themer/themer.scss
+++ b/inst/themer/themer.scss
@@ -11,4 +11,6 @@
 
 .move-grabber {
   cursor: move;
+  /* Required to avoid scrolling on mobile safari */
+  touch-action: none;
 }
